# LSM9DS1_RPI_ROS

./: .gitignore  CMakeLists.txt  README.md  imu.h  main_ros.cpp
LSM9DS1/: CMakeLists.txt  README.md
LSM9DS1/include/: wiringPiI2C.h
LSM9DS1/src/: LSM9DS1.cpp
